	calendar folders with the correct class: SOGoWebAppointmentFolder. It also
	removes invalid references in the WebCalendars setting.
	* UI/Scheduler/UIxCalFolderActions.m (importAction): Moved a big part of the 
	method to [SOGoAppointmentFolder importCalendar:].
	* SoObjects/Appointments/SOGoWebAppointmentFolder.m (delete): Wrap the
	parent method to remove the calendar for the user's settings.

2009-09-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m (-setComment,comment):
	properly substitute the form-provided "\r\n" sequences with "\n"
	sequences and vice-versa.

2009-09-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-_getMaxStartDate): do not compute the start date if the active
	user is a super user.
	(_enforceTimeLimitOnFilter:withStartDate:andEndDate:): same as
	above.

	* SoObjects/SOGo/SOGoUser.m (-rolesForObject:inContext:): directly
	invoke [self isSuperUser]

2009-09-09  Cyril Robert <crobert@inverse.ca>

	* Tools/NSDictionary+SOGoTool.m: Removed, all methods were moved to
	SoObjects/NSDictionary+Utilities.m, or SoObjects/NSString+Utilities.m
	* UI/Contacts/UIxContactFolderActions.m: New class to handle actions on a
	single contacts folder. (import/export)
	* UI/Scheduler/UIxCalFolderActions.m: New class to handle actions on a
	single agenda folder. (import/export)
	* SoObjects/SOGo/NSDictionary+Utilities.m: Added userRecordAsLDIFEntry.
	* SoObjects/SOGo/NSString+Utilities.m: Added methods useful for 
	userRecordAsLDIFEntry.
	* UI/Contacts/UIxContactsListView.m: Removed import/export actions
	* UI/Scheduler/UIxCalView.m: Removed import/export actions
	* SoObjects/Contacts/NGVCard+SOGo.m: Added a new category to remove a
	circular dependency issue.
	* SoObjects/Contacts/NGVList+SOGo.m: Added a new category to remove a
	circular dependency issue.
	* UI/Contacts/UIxContactFolderActions.m: Changed import instructions to use
	the new category.
